Adddressing @ElDeveloper comments

--- a/ipynbs/Chasing_Platypus_via_MG-RAST.ipynb
+++ b/ipynbs/Chasing_Platypus_via_MG-RAST.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This tutorial covers downloading all public MG-RAST datasets; parsing those files to search for a specific taxa of interest, in our case Platypus (Ornithorhynchus); and finding the geographycal location of the samples that match those samples, via Google. "
+    "This tutorial covers downloading all public MG-RAST datasets; parsing those files to search for a specific taxa of interest, in our case Platypus (Ornithorhynchus); and finding the geographycal location of the samples that match those samples, via Google. Note that you need [BeautifulSoup](http://www.crummy.com/software/BeautifulSoup/#Download/) installed."
    ]
   },
   {
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The first step is to crawl MG-RAST website to search for all public datasets, downloading both the data (in HTML format) and the metadata (tab separated) for each study and store them locally. To avoid having hundreds of files in a single directory the script will group them in folders by the first 3 characters of its name. Note that MG-RAST calls each sample a project, here we will call them samples."
+    "The first step is to crawl MG-RAST's website to search for all public datasets, downloading both the data (in HTML format) and the metadata (tab separated) for each study and store them locally. To avoid having hundreds of files in a single directory the script will group them in folders by the first 3 characters of its name. Note that MG-RAST calls each sample a project, here we will call them samples."
    ]
   },
   {
@@ -88,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we have all MG-RAST files in our local folder we can search for any taxa of interest. Note that the HMTLs that we downloaded in the previous step have all data information that MG-RAST provides from a sample, for example: multilevel taxonomic and functional assignments. Thus, in the next step you can search by any \"string\" that fits in those categories. The output of this section is tab separated text file named as the query (lower case) with two columns: sample name and counts of the successful search on that sample."
+    "Now that we have all MG-RAST files in our local folder we can search for any taxa of interest. Note that the HMTL filess that we downloaded in the previous step have all data information that MG-RAST provides from a sample, for example: multilevel taxonomic and functional assignments. Thus, in the next step you can search by any \"string\" that fits in those categories. The output of this section is tab separated text file named as the query (lower case) with two columns: sample name and counts of the successful search on that sample."
    ]
   },
   {
@@ -108,7 +108,7 @@
     "output_fp = open(query + '.txt', 'w')\n",
     "\n",
     "# looping in local dir to find downloaded folders\n",
-    "# all mgrast created forldesr are 3 chars long and start with a 4\n",
+    "# all mgrast created folders are 3 chars long and start with a 4\n",
     "dirs = [d for d in listdir('./')\n",
     "        if len(d) == 3 and d.startswith('4') and isdir(d)]\n",
     "\n",
@@ -133,6 +133,7 @@
     "                counts = target.split(',')[1]\n",
     "                counts = counts[:counts.find(']')]\n",
     "                output_fp.write('%s\\t%s\\n' % (sample_id, counts))\n",
+    "                \n",
     "output_fp.close()"
    ]
   },
@@ -147,7 +148,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this step we will search for the geographical location of the successful samples from the previous using the latitute and longitude values from the metadata."
+    "In this step we will search for the geographical location of the successful samples from the previous step using the latitute and longitude values from the metadata."
    ]
   },
   {
@@ -166,7 +167,7 @@
     "\n",
     "input_fp = 'ornithorhynchus.txt'\n",
     "\n",
-    "# from http://stackoverflow.com/questions/20169467/how-to-convert-from-longitude-and-latitude-to-country-or-city\n",
+    "# from http://stackoverflow.com/a/20169528/4228285\n",
     "def getplace(lat, lon):\n",
     "    url = (\"http://maps.googleapis.com/maps/api/geocode/json?\"\n",
     "           \"latlng=%s,%s&sensor=false\" % (lat, lon))\n",
@@ -236,9 +237,7 @@
     "    if country == 'Undefined':\n",
     "        print \"// ['%s', %d],\" % (country, counts)\n",
     "    else:\n",
-    "        print \"['%s', %d],\" % (country, counts)\n",
-    "\n",
-    "    "
+    "        print \"['%s', %d],\" % (country, counts)"
    ]
   }
  ],
