Adddressing @ElDeveloper comments

--- a/ipynbs/Chasing_Platypus_via_MG-RAST.ipynb
+++ b/ipynbs/Chasing_Platypus_via_MG-RAST.ipynb
@@ -222,7 +222,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once those results are parsed you could use http://jsfiddle.net/a1royfjh/ to plot the resuls by copy/pasting the result of the next block in the bottom, left section. You need to replace the lines that all the way to the left."
+    "Once those results are parsed you could use http://jsfiddle.net/a1royfjh/ to plot the resuls by copy/pasting the result of the next block in the bottom-left section. You need to replace the lines that are all the way to the left, which contains the country and counts information."
    ]
   },
   {
