making notebook aware of http timeouts and more verbose

--- a/ipynbs/Chasing_Platypus_via_MG-RAST.ipynb
+++ b/ipynbs/Chasing_Platypus_via_MG-RAST.ipynb
@@ -37,9 +37,10 @@
    "outputs": [],
    "source": [
     "from BeautifulSoup import BeautifulSoup\n",
-    "from urllib2 import urlopen\n",
+    "from urllib2 import urlopen, URLError\n",
     "from os.path import isfile, exists, join\n",
     "from os import makedirs\n",
+    "from socket import timeout as TOError\n",
     "\n",
     "mgrast_analysis = 'http://metagenomics.anl.gov/metagenomics.cgi?page=Analysis'\n",
     "mgrast_metagenome = ('http://metagenomics.anl.gov/metagenomics.cgi?page='\n",
@@ -50,7 +51,9 @@
     "\n",
     "page = urlopen(mgrast_analysis)\n",
     "soup = BeautifulSoup(page.read())\n",
+    "count = 0\n",
     "all_inputs = soup.findAll('input', {'id': 'list_select_data_0'})[0]\n",
+    "print '====> Got Analysis page results'\n",
     "for maingroups in all_inputs['value'].encode('utf-8').split('||'):\n",
     "    for mg in maingroups.split('@'):\n",
     "        sample = mg.split('##')[0].split('~#')[0]\n",
@@ -59,22 +62,31 @@
     "\n",
     "        sample_fp = join(dirname, 'sample_' + sample + '.txt')\n",
     "        map_fp = join(dirname, 'map_' + sample + '.txt')\n",
-    "\n",
+    "        \n",
+    "        count = count + 1\n",
+    "        if count % 50 == 0:\n",
+    "            print \"====> Processed %d samples\" % count\n",
     "        # continue if sample is blank or file already exists\n",
     "        if sample == '' or (isfile(sample_fp) and isfile(map_fp)):\n",
     "            continue\n",
     "\n",
-    "        print 'Processing: %s %s' % (sample, mg)\n",
+    "        print 'Processing (%d): %s %s' % (count, sample, mg)\n",
     "\n",
     "        if not exists(dirname):\n",
     "            makedirs(dirname)\n",
     "\n",
     "        # visiting the Overview page to download counts\n",
-    "        page = urlopen(mgrast_metagenome + sample)\n",
-    "        open(sample_fp, 'w').write(page.read())\n",
-    "\n",
-    "        page = urlopen(mgrast_metadata % sample)\n",
-    "        open(map_fp, 'w').write(page.read())"
+    "        try:\n",
+    "            page_sample = urlopen(mgrast_metagenome + sample, timeout=40)\n",
+    "            page_mapping = urlopen(mgrast_metadata % sample, timeout=40)\n",
+    "        except (TOError, URLError), e:\n",
+    "            # Timeout\n",
+    "            print e\n",
+    "            count = count - 1\n",
+    "            continue\n",
+    "        \n",
+    "        open(sample_fp, 'w').write(page_sample.read())\n",
+    "        open(map_fp, 'w').write(page_mapping.read())"
    ]
   },
   {
