--- a/ipynbs/Chasing_Platypus_via_MG-RAST.ipynb
+++ b/ipynbs/Chasing_Platypus_via_MG-RAST.ipynb
@@ -25,6 +25,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<b>Before you continue: </b>This step is extremelly slow (~24 hrs.) and network intensive. Thus to facilitate this step you could download the files from April 22, 2015 [ftp://ftp.microbio.me/pub/platypus/mgrast_reports_042215.tgz](ftp://ftp.microbio.me/pub/platypus/mgrast_reports_042215.tgz). If you place them in the same folder that you have this IPython notebook the code will simply download the latests samples.\n",
+    "\n",
     "The first step is to crawl MG-RAST's website to search for all public datasets, downloading both the data (in HTML format) and the metadata (tab separated) for each study and store them locally. To avoid having hundreds of files in a single directory the script will group them in folders by the first 3 characters of its name. Note that MG-RAST calls each sample a project, here we will call them samples."
    ]
   },
@@ -100,7 +102,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we have all MG-RAST files in our local folder we can search for any taxa of interest. Note that the HMTL filess that we downloaded in the previous step have all data information that MG-RAST provides from a sample, for example: multilevel taxonomic and functional assignments. Thus, in the next step you can search by any \"string\" that fits in those categories. The output of this section is tab separated text file named as the query (lower case) with two columns: sample name and counts of the successful search on that sample."
+    "<b>Before you continue:</b> This step is not as slow as the previus one but still a bit slow (~1 hr). If you only want to reproduce the results from the paper you can download this file: [ftp://ftp.microbio.me/pub/platypus/mgrast_search_results.tgz](ftp://ftp.microbio.me/pub/platypus/mgrast_search_results.tgz)\n",
+    "\n",
+    "Now that we have all MG-RAST files in our local folder we can search for any taxa of interest. Note that the HMTL filess that we downloaded in the previous step have all data information that MG-RAST provides from a sample, for example: multilevel taxonomic and functional assignments. Thus, in the next step you can search by any \"string\" that fits in those categories. The output of this section is tab separated text file named as the query (lower case) with three columns: the name found, the sample name and counts of the successful search on that sample."
    ]
   },
   {
@@ -115,19 +119,31 @@
     "from os import listdir, makedirs\n",
     "from os.path import isdir, isfile, join, basename, exists\n",
     "\n",
-    "query = 'Ornithorhynchus'\n",
-    "query = query.lower()\n",
-    "output_fp = open(query + '.txt', 'w')\n",
+    "queries = ['Ornithorhynchus', \n",
+    "           'Salmonella', \n",
+    "           'Raphus', \n",
+    "           'Thylacinus']\n",
+    "\n",
+    "queries = [q.lower() for q in queries]\n",
+    "\n",
+    "queries_fp = [open(q + '.txt', 'w') for q in queries]\n",
+    "\n",
+    "# adding a \" at the beginning of the queries so we do exact matching\n",
+    "queries = ['\"%s' % q for q in queries]\n",
     "\n",
     "# looping in local dir to find downloaded folders\n",
     "# all mgrast created folders are 3 chars long and start with a 4\n",
     "dirs = [d for d in listdir('./')\n",
     "        if len(d) == 3 and d.startswith('4') and isdir(d)]\n",
     "\n",
+    "count_files = 0\n",
     "for d in dirs:\n",
     "    # getting files in current directory\n",
     "    files = [join(d, f) for f in listdir(d) if f.startswith('sample_')]\n",
     "    for sample in files:\n",
+    "        count_files = count_files + 1\n",
+    "        if count_files % 250 == 0:\n",
+    "            print 'Processed %d files' % count_files\n",
     "        sample_id = basename(f)[len('sample_'):-len('.txt')]\n",
     "        mapping = join(d, 'map_%s.txt' % sample_id)\n",
     "\n",
@@ -140,27 +156,36 @@
     "        for s in soup.findAll('script'):\n",
     "            s = str(s).lower()\n",
     "            \n",
-    "            if query in s:\n",
-    "                target = [t for t in s.split('\\n') if query in t][0]\n",
-    "                counts = target.split(',')[1]\n",
-    "                counts = counts[:counts.find(']')]\n",
-    "                output_fp.write('%s\\t%s\\n' % (sample_id, counts))\n",
+    "            for q, qfp in zip(queries, queries_fp):\n",
+    "                if q in s:\n",
+    "                    target = [t for t in s.split('\\n') if q in t][0]\n",
+    "                    name, counts = target.split(',')\n",
+    "                    name = name.split('data.addrow([')[1].strip('\"')\n",
+    "                    counts = counts[:counts.find(']')]\n",
+    "                    qfp.write('%s\\t%s\\t%s\\n' % (name, sample_id, counts))\n",
     "                \n",
-    "output_fp.close()"
+    "_ = [q.close() for q in queries_fp]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Finding geographical localtion of samples"
+    "Once you are finish with the search we suggest double checking that the files generated have in the first column the actual name that was found and that it matches your search."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this step we will search for the geographical location of the successful samples from the previous step using the latitute and longitude values from the metadata."
+    "## Finding geographical location of samples and summarizing results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The first step is to generate a dictionary of dictonaries containing the counts per country of all the files generated in the previous step. Note that you need to feed which files you want to parse. To find the country of origin of the samples we will use the latitute and longitude values from the metadata. The speed on this step depends a lot on the number of hits and the diversity of countries in the results. For the example it took a little over 1 hr to run. Finally, remember that we are relying on an online (Google) service so the country summaries are based on its availability and successful reply."
    ]
   },
   {
@@ -176,13 +201,22 @@
     "\n",
     "from os import listdir\n",
     "from os.path import isdir, isfile, join\n",
+    "from time import sleep\n",
     "\n",
-    "input_fp = 'ornithorhynchus.txt'\n",
+    "           \n",
+    "in_fps = ['ornithorhynchus.txt', \n",
+    "          'raphus.txt', \n",
+    "          'salmonella.txt', \n",
+    "          'thylacinus.txt']\n",
     "\n",
     "# from http://stackoverflow.com/a/20169528/4228285\n",
     "def getplace(lat, lon):\n",
     "    url = (\"http://maps.googleapis.com/maps/api/geocode/json?\"\n",
     "           \"latlng=%s,%s&sensor=false\" % (lat, lon))\n",
+    "    # googleapis blocks requests that happen too fast so\n",
+    "    # making sure to wait for 5 seconds before quering the\n",
+    "    # api\n",
+    "    sleep(5)\n",
     "    v = urlopen(url).read()\n",
     "    j = json.loads(v)\n",
     "\n",
@@ -197,44 +231,54 @@
     "\n",
     "    return str(country)\n",
     "\n",
+    "print 'starting processing'\n",
+    "sample_country = {}\n",
+    "sample_country_counts = {fps:{} for fps in in_fps}\n",
+    "for fps in in_fps:\n",
+    "    print \"Processing file %s\" % fps\n",
+    "    for line in open(fps, 'r'):\n",
+    "        _, sample, counts = line.strip().split('\\t')\n",
+    "        counts = int(counts)\n",
+    "        \n",
+    "        if sample not in sample_country:\n",
+    "            mapping = join(sample[:3], 'map_%s.txt' % sample)\n",
     "\n",
-    "countries = {}\n",
-    "for line in open(input_fp, 'r'):\n",
-    "    sample, counts = line.strip().split('\\t')\n",
-    "    counts = int(counts)\n",
-    "    mapping = join(sample[:3], 'map_%s.txt' % sample)\n",
-    "    \n",
-    "    if not isfile(mapping):\n",
-    "        raise ValueError('Check the existance of: %s' % (mapping))\n",
-    "    \n",
-    "    lat = ''\n",
-    "    lon = ''\n",
-    "    for line in open(mapping, 'r'):\n",
-    "        line = line.split('\\t')\n",
-    "        \n",
-    "        # sometimes the lat/lon have different comma separated values\n",
-    "        # will only use the first one\n",
-    "        if line[0] == 'Sample' and line[1] == 'longitude':\n",
-    "            lon = float(line[2].strip().split(',')[0].strip())\n",
-    "        elif line[0] == 'Sample' and line[1] == 'latitude':\n",
-    "            lat = float(line[2].strip().split(',')[0].strip())\n",
-    "        \n",
-    "        if not lat or not lon:\n",
-    "            country = 'Undefined'\n",
+    "            if not isfile(mapping):\n",
+    "                raise ValueError(\"%s doesn't exist!!\" % (mapping))\n",
+    "\n",
+    "            # getting lat/long and quering Google for country\n",
+    "            lat = ''\n",
+    "            lon = ''\n",
+    "            for line in open(mapping, 'r'):\n",
+    "                line = line.split('\\t')\n",
+    "\n",
+    "                # sometimes the lat/lon have different comma separated values\n",
+    "                # will only use the first one\n",
+    "                if line[0] == 'Sample' and line[1] == 'longitude':\n",
+    "                    lon = float(line[2].strip().split(',')[0].strip())\n",
+    "                elif line[0] == 'Sample' and line[1] == 'latitude':\n",
+    "                    lat = float(line[2].strip().split(',')[0].strip())\n",
+    "\n",
+    "                if not lat or not lon:\n",
+    "                    country = 'Undefined'\n",
+    "                else:\n",
+    "                    country = getplace(lat, lon)\n",
+    "            \n",
+    "            sample_country[sample] = country\n",
     "        else:\n",
-    "            country = getplace(lat, lon)\n",
+    "            country = sample_country[sample]\n",
     "        \n",
-    "        if country not in countries:\n",
-    "            countries[country] = counts\n",
-    "        else:\n",
-    "            countries[country] = countries[country] + counts"
+    "        if country not in sample_country_counts[fps]:\n",
+    "            sample_country_counts[fps][country] = 0\n",
+    "            \n",
+    "        sample_country_counts[fps][country] += counts"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once those results are parsed you could use http://jsfiddle.net/a1royfjh/ to plot the resuls by copy/pasting the result of the next block in the bottom-left section. You need to replace the lines that are all the way to the left, which contains the country and counts information."
+    "Now, let's save the results in a single file. The example files can be downloaded from [ftp://ftp.microbio.me/pub/platypus/mgrast_countries_results.tgz](ftp://ftp.microbio.me/pub/platypus/mgrast_countries_results.tgz)."
    ]
   },
   {
@@ -245,11 +289,48 @@
    },
    "outputs": [],
    "source": [
-    "for country, counts in countries.items():\n",
-    "    if country == 'Undefined':\n",
-    "        print \"// ['%s', %d],\" % (country, counts)\n",
-    "    else:\n",
-    "        print \"['%s', %d],\" % (country, counts)"
+    "from operator import itemgetter\n",
+    "\n",
+    "\n",
+    "for fps, results in sample_country_counts.items():\n",
+    "    sorted_results = sorted(results.items(),\n",
+    "                            key=itemgetter(1)) \n",
+    "    fps_out = open(fps[:-len('.txt')] + '_countries.txt', 'w')\n",
+    "    for country, count in sorted_results:\n",
+    "        fps_out.write(\"%s\\t%d\\n\" % (country, count))\n",
+    "    fps_out.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, we can use those results with http://jsfiddle.net/a1royfjh/ to generate some visualizations by copy/pasting the result of each of the next blocks in the bottom-left section. You need to replace the lines that are all the way to the left, which contains the country and counts information."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "fps = ['ornithorhynchus_countries.txt',\n",
+    "       'raphus_countries.txt',\n",
+    "       'salmonella_countries.txt',\n",
+    "       'thylacinus_countries.txt']\n",
+    "\n",
+    "for fp in fps:\n",
+    "    print '================================='\n",
+    "    print 'Code for: %s' % fp\n",
+    "    \n",
+    "    for line in open(fp, 'r'):\n",
+    "        country, counts = line.strip().split('\\t')\n",
+    "        if country == 'Undefined':\n",
+    "            print \"// ['%s', %s],\" % (country, counts)\n",
+    "        else:\n",
+    "            print \"['%s', %s],\" % (country, counts)"
    ]
   }
  ],
