for relly annoying (formatting issue) @ElDeveloper

--- a/ipynbs/Chasing_Platypus_via_MG-RAST.ipynb
+++ b/ipynbs/Chasing_Platypus_via_MG-RAST.ipynb
@@ -211,7 +211,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>Note:</b> We suggest reviewing the resulting files, in specific check that the first column actually matches your query. Depending on the how broad the term is, it could have hits to other taxa."
+    "**Note:** We suggest reviewing the resulting files, in specific check that the first column actually matches your query. Depending on the how broad the term is, it could have hits to other taxa."
    ]
   },
   {
