ENH: Use HTML instead of Javascript

--- a/ipynbs/Chasing_Platypus_via_MG-RAST.ipynb
+++ b/ipynbs/Chasing_Platypus_via_MG-RAST.ipynb
@@ -369,7 +369,7 @@
    },
    "outputs": [],
    "source": [
-    "from IPython.display import Javascript, display\n",
+    "from IPython.display import HTML, display\n",
     "from jinja2 import Template\n",
     "from pycountry import countries\n",
     "\n",
@@ -403,10 +403,11 @@
     "    # this is a JavaScript dictionary of colors ... datamaps has an odd API\n",
     "    color_data = '\\n'.join([\"'%s': '%s',\" % (a, a) for a in df.Color.unique()])\n",
     "\n",
-    "    js_template = \"\"\"\n",
-    "        $(element).append('<h1>Thylacinus</h1');\n",
-    "        $(element).append('<div id=\"{{ name }}\" style=\"position: relative; width:500px; height:300px;\"></div>');\n",
+    "    html_template = \"\"\"\n",
+    "    <h1>Thylacinus</h1>\n",
+    "    <div id=\"{{ name }}\" style=\"position: relative; width:500px; height:300px;\"></div>'\n",
     "\n",
+    "    <script>\n",
     "        require.config({\n",
     "                        paths: {d3: \"https://cdn.rawgit.com/ElDeveloper/a6fc14f8993a1b8ad843/raw/ca8d8c12125cd93ccf6902c4dacce473e4cf2c3b/d3.v3.min\",\n",
     "                        topojson: \"https://cdn.rawgit.com/ElDeveloper/7d4f4a12683b03008435/raw/7ab04a76821117541a86764036e41edb00fae4f3/topojson.v1.min\",\n",
@@ -435,11 +436,12 @@
     "\n",
     "                    });\n",
     "        });\n",
+    "    </script>\n",
     "    \"\"\"\n",
-    "    temp = Template(js_template)\n",
+    "    temp = Template(html_template)\n",
     "    output = temp.render(country_data=country_data, color_data=color_data,\n",
     "                         name=name)\n",
-    "    display(Javascript(output))"
+    "    display(HTML(output))"
    ]
   },
   {
@@ -452,11 +454,12 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": [
+      "text/html": [
        "\n",
-       "        $(element).append('<h1>Thylacinus</h1');\n",
-       "        $(element).append('<div id=\"Ornithorhynchus\" style=\"position: relative; width:500px; height:300px;\"></div>');\n",
+       "    <h1>Thylacinus</h1>\n",
+       "    <div id=\"Ornithorhynchus\" style=\"position: relative; width:500px; height:300px;\"></div>'\n",
        "\n",
+       "    <script>\n",
        "        require.config({\n",
        "                        paths: {d3: \"https://cdn.rawgit.com/ElDeveloper/a6fc14f8993a1b8ad843/raw/ca8d8c12125cd93ccf6902c4dacce473e4cf2c3b/d3.v3.min\",\n",
        "                        topojson: \"https://cdn.rawgit.com/ElDeveloper/7d4f4a12683b03008435/raw/7ab04a76821117541a86764036e41edb00fae4f3/topojson.v1.min\",\n",
@@ -508,10 +511,11 @@
        "\n",
        "                    });\n",
        "        });\n",
+       "    </script>\n",
        "    "
       ],
       "text/plain": [
-       "<IPython.core.display.Javascript object>"
+       "<IPython.core.display.HTML object>"
       ]
      },
      "metadata": {},
@@ -519,11 +523,12 @@
     },
     {
      "data": {
-      "application/javascript": [
+      "text/html": [
        "\n",
-       "        $(element).append('<h1>Thylacinus</h1');\n",
-       "        $(element).append('<div id=\"Raphus\" style=\"position: relative; width:500px; height:300px;\"></div>');\n",
+       "    <h1>Thylacinus</h1>\n",
+       "    <div id=\"Raphus\" style=\"position: relative; width:500px; height:300px;\"></div>'\n",
        "\n",
+       "    <script>\n",
        "        require.config({\n",
        "                        paths: {d3: \"https://cdn.rawgit.com/ElDeveloper/a6fc14f8993a1b8ad843/raw/ca8d8c12125cd93ccf6902c4dacce473e4cf2c3b/d3.v3.min\",\n",
        "                        topojson: \"https://cdn.rawgit.com/ElDeveloper/7d4f4a12683b03008435/raw/7ab04a76821117541a86764036e41edb00fae4f3/topojson.v1.min\",\n",
@@ -554,10 +559,11 @@
        "\n",
        "                    });\n",
        "        });\n",
+       "    </script>\n",
        "    "
       ],
       "text/plain": [
-       "<IPython.core.display.Javascript object>"
+       "<IPython.core.display.HTML object>"
       ]
      },
      "metadata": {},
@@ -565,11 +571,12 @@
     },
     {
      "data": {
-      "application/javascript": [
+      "text/html": [
        "\n",
-       "        $(element).append('<h1>Thylacinus</h1');\n",
-       "        $(element).append('<div id=\"Salmonella\" style=\"position: relative; width:500px; height:300px;\"></div>');\n",
+       "    <h1>Thylacinus</h1>\n",
+       "    <div id=\"Salmonella\" style=\"position: relative; width:500px; height:300px;\"></div>'\n",
        "\n",
+       "    <script>\n",
        "        require.config({\n",
        "                        paths: {d3: \"https://cdn.rawgit.com/ElDeveloper/a6fc14f8993a1b8ad843/raw/ca8d8c12125cd93ccf6902c4dacce473e4cf2c3b/d3.v3.min\",\n",
        "                        topojson: \"https://cdn.rawgit.com/ElDeveloper/7d4f4a12683b03008435/raw/7ab04a76821117541a86764036e41edb00fae4f3/topojson.v1.min\",\n",
@@ -620,10 +627,11 @@
        "\n",
        "                    });\n",
        "        });\n",
+       "    </script>\n",
        "    "
       ],
       "text/plain": [
-       "<IPython.core.display.Javascript object>"
+       "<IPython.core.display.HTML object>"
       ]
      },
      "metadata": {},
@@ -631,11 +639,12 @@
     },
     {
      "data": {
-      "application/javascript": [
+      "text/html": [
        "\n",
-       "        $(element).append('<h1>Thylacinus</h1');\n",
-       "        $(element).append('<div id=\"Thylacinus\" style=\"position: relative; width:500px; height:300px;\"></div>');\n",
+       "    <h1>Thylacinus</h1>\n",
+       "    <div id=\"Thylacinus\" style=\"position: relative; width:500px; height:300px;\"></div>'\n",
        "\n",
+       "    <script>\n",
        "        require.config({\n",
        "                        paths: {d3: \"https://cdn.rawgit.com/ElDeveloper/a6fc14f8993a1b8ad843/raw/ca8d8c12125cd93ccf6902c4dacce473e4cf2c3b/d3.v3.min\",\n",
        "                        topojson: \"https://cdn.rawgit.com/ElDeveloper/7d4f4a12683b03008435/raw/7ab04a76821117541a86764036e41edb00fae4f3/topojson.v1.min\",\n",
@@ -684,10 +693,11 @@
        "\n",
        "                    });\n",
        "        });\n",
+       "    </script>\n",
        "    "
       ],
       "text/plain": [
-       "<IPython.core.display.Javascript object>"
+       "<IPython.core.display.HTML object>"
       ]
      },
      "metadata": {},
