BUG: Fix problem with the titles

--- a/ipynbs/Chasing_Platypus_via_MG-RAST.ipynb
+++ b/ipynbs/Chasing_Platypus_via_MG-RAST.ipynb
@@ -404,7 +404,7 @@
     "    color_data = '\\n'.join([\"'%s': '%s',\" % (a, a) for a in df.Color.unique()])\n",
     "\n",
     "    html_template = \"\"\"\n",
-    "    <h1>Thylacinus</h1>\n",
+    "    <h1>{{ name }}</h1>\n",
     "    <div id=\"{{ name }}\" style=\"position: relative; width:500px; height:300px;\"></div>'\n",
     "\n",
     "    <script>\n",
@@ -423,7 +423,6 @@
     "                        {{ color_data }}\n",
     "                    },\n",
     "                    geographyConfig: {\n",
-    "                        // highlightOnHover: false,\n",
     "                        highlightBorderColor: '#bada55',\n",
     "                        popupTemplate: function(geography, data) {\n",
     "                            if (data !== null){\n",
@@ -456,7 +455,7 @@
      "data": {
       "text/html": [
        "\n",
-       "    <h1>Thylacinus</h1>\n",
+       "    <h1>Ornithorhynchus</h1>\n",
        "    <div id=\"Ornithorhynchus\" style=\"position: relative; width:500px; height:300px;\"></div>'\n",
        "\n",
        "    <script>\n",
@@ -498,7 +497,6 @@
        "'#004529': '#004529',\n",
        "                    },\n",
        "                    geographyConfig: {\n",
-       "                        // highlightOnHover: false,\n",
        "                        highlightBorderColor: '#bada55',\n",
        "                        popupTemplate: function(geography, data) {\n",
        "                            if (data !== null){\n",
@@ -525,7 +523,7 @@
      "data": {
       "text/html": [
        "\n",
-       "    <h1>Thylacinus</h1>\n",
+       "    <h1>Raphus</h1>\n",
        "    <div id=\"Raphus\" style=\"position: relative; width:500px; height:300px;\"></div>'\n",
        "\n",
        "    <script>\n",
@@ -546,7 +544,6 @@
        "'#004529': '#004529',\n",
        "                    },\n",
        "                    geographyConfig: {\n",
-       "                        // highlightOnHover: false,\n",
        "                        highlightBorderColor: '#bada55',\n",
        "                        popupTemplate: function(geography, data) {\n",
        "                            if (data !== null){\n",
@@ -573,7 +570,7 @@
      "data": {
       "text/html": [
        "\n",
-       "    <h1>Thylacinus</h1>\n",
+       "    <h1>Salmonella</h1>\n",
        "    <div id=\"Salmonella\" style=\"position: relative; width:500px; height:300px;\"></div>'\n",
        "\n",
        "    <script>\n",
@@ -614,7 +611,6 @@
        "'#004529': '#004529',\n",
        "                    },\n",
        "                    geographyConfig: {\n",
-       "                        // highlightOnHover: false,\n",
        "                        highlightBorderColor: '#bada55',\n",
        "                        popupTemplate: function(geography, data) {\n",
        "                            if (data !== null){\n",
@@ -680,7 +676,6 @@
        "'#004529': '#004529',\n",
        "                    },\n",
        "                    geographyConfig: {\n",
-       "                        // highlightOnHover: false,\n",
        "                        highlightBorderColor: '#bada55',\n",
        "                        popupTemplate: function(geography, data) {\n",
        "                            if (data !== null){\n",
